docs builds could now avoid specifying a CUDA dependency and just link to 'ucx' from the conda environment

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,10 +6,7 @@ build:
     python: "mambaforge-22.9"
   jobs:
     post_create_environment:
-      - |
-        pip install \
-          -C rapidsai.matrix-entry="cuda=12.2" \
-          .
+      - pip install .
 
 conda:
   environment: conda/environments/builddocs.yml
