--- a/docker/ucx-py-cuda11.5.yml
+++ b/docker/ucx-py-cuda11.5.yml
@@ -7,7 +7,7 @@ dependencies:
   - python=3.9
   - cudatoolkit=11.5
   - setuptools
-  - cython>=0.29.14,<3.0.0a0
+  - cython>=3.0.0
   - pytest
   - pytest-asyncio
   - dask
