--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,10 +6,10 @@ build:
     python: "mambaforge-22.9"
   jobs:
     post_create_environment:
+      # explicitly passing matrix-entry so that 'libucx' is pulled in,
+      # and therefore tested in this no-CUDA environment
       - |
         pip install \
-          --extra-index-url "https://pypi.anaconda.org/rapidsai-wheels-nightly/simple/" \
-          -C rapidsai.disable-cuda=true \
           -C rapidsai.matrix-entry="cuda=12.2" \
           .
 
