--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -6,6 +6,7 @@ files:
       - checks
       - cuda
       - cuda_version
+      - depends_on_cupy
       - py_version
       - rapids_build_setuptools
       - run
@@ -14,6 +15,7 @@ files:
     output: none
     includes:
       - cuda_version
+      - depends_on_cupy
       - py_version
       - test_python
   checks:
@@ -52,6 +54,7 @@ files:
       table: project.optional-dependencies
       key: test
     includes:
+      - depends_on_cupy
       - test_python
 channels:
   - rapidsai
@@ -135,6 +138,24 @@ dependencies:
         packages:
           - numpy>=1.23,<2.0a0
           - pynvml>=11.4.1
+  depends_on_cupy:
+    common:
+      - output_types: conda
+        packages:
+          - cupy>=12.0.0
+    # NOTE: This is intentionally not broken into groups by a 'cuda_suffixed' selector like
+    #       other packages with -cu{nn}x suffixes in this file.
+    #       All RAPIDS wheel builds (including in devcontainers) expect cupy to be suffixed.
+    specific:
+      - output_types: [requirements, pyproject]
+        matrices:
+          - matrix: {cuda: "12.*"}
+            packages:
+              - &cupy_cu12 cupy-cuda12x>=12.0.0
+          - matrix: {cuda: "11.*"}
+            packages:
+              - cupy-cuda11x>=12.0.0
+          - {matrix: null, packages: [*cupy_cu12]}
   depends_on_ucx_build:
     common:
       - output_types: conda
@@ -205,7 +226,6 @@ dependencies:
       - output_types: [conda]
         packages:
           - &cudf_unsuffixed cudf==24.10.*,>=0.0.0a0
-          - cupy>=12.0.0
     specific:
       - output_types: [requirements, pyproject]
         matrices:
@@ -214,30 +234,11 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - cudf-cu12==24.10.*,>=0.0.0a0
-              - &cupy_cu12 cupy-cuda12x>=12.0.0
-          - matrix:
-              cuda: "12.*"
-              cuda_suffixed: "false"
-            packages:
-              - *cudf_unsuffixed
-              # NOTE: cupy still has a "-cuda12x" suffix here, because it's suffixed
-              #       in DLFW builds
-              - *cupy_cu12
           - matrix:
               cuda: "11.*"
               cuda_suffixed: "true"
             packages:
               - cudf-cu11==24.10.*,>=0.0.0a0
-              - &cupy_cu11 cupy-cuda11x>=12.0.0
-          - matrix:
-              cuda: "11.*"
-              cuda_suffixed: "false"
-            packages:
-              - *cudf_unsuffixed
-              # NOTE: cupy still has a "-cuda11x" suffix here, because it's suffixed
-              #       in DLFW builds
-              - *cupy_cu11
           - matrix:
             packages:
               - *cudf_unsuffixed
-              - *cupy_cu11
