--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ classifiers = [
 [project.optional-dependencies]
 test = [
     "cloudpickle",
-    "cudf==24.8.*,>=0.0.0a0",
+    "cudf==24.8.*",
     "cupy-cuda11x>=12.0.0",
     "dask",
     "distributed",
