--- a/docker/ucx-py-cuda12.5.yml
+++ b/docker/ucx-py-cuda12.5.yml
@@ -5,7 +5,7 @@ channels:
 
 dependencies:
   - python=3.10
-  - cudatoolkit=11.5
+  - cuda-version=12.5
   - setuptools
   - cython>=3.0.0
   - pytest
