--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,3 +134,11 @@ exclude=["*tests*"]
 
 [tool.setuptools.dynamic]
 version = {file = "ucp/VERSION"}
+
+[tool.pydistcheck]
+select = [
+    "distro-too-large-compressed",
+]
+
+# PyPI limit is 100 MiB, fail CI before we get too close to that
+max_allowed_size_compressed = '75M'
