Use `rapids-dask-dependency`
Switch to use `rapids-dask-dependency` to handle the Dask test
dependency in this repo. That way it aligns to how Dask is pulled and
used in the rest of RAPIDS and will pick up any corresponding updates
simply.

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -217,7 +217,7 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - cloudpickle
-          - dask
+          - rapids-dask-dependency==25.2.*,>=0.0.0a0
           - distributed
           - numba>=0.57
           - pytest==7.*
