Create Conda test environment in one go (#1101)
Partially addresses issue: https://github.com/rapidsai/build-planning/issues/22

Instead of creating the Conda test environment and then installing `ucx-py` into it, just create the Conda environment with the `ucx-py` package to start with. Thus the environment is constructed only once with everything it needs before testing begins.

Authors:
  - https://github.com/jakirkham

Approvers:
  - Mike Sarahan (https://github.com/msarahan)
  - Peter Andreas Entschev (https://github.com/pentschev)

URL: https://github.com/rapidsai/ucx-py/pull/1101

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -17,6 +17,7 @@ files:
       - cuda_version
       - depends_on_cupy
       - py_version
+      - test_ucx_py
       - test_python
   checks:
     output: none
@@ -212,12 +213,17 @@ dependencies:
           # without CUDA, e.g. 'pip install .'
           - matrix: null
             packages: null
+  test_ucx_py:
+    common:
+      - output_types: conda
+        packages:
+          - ucx-py==0.42.*,>=0.0.0a0
   test_python:
     common:
       - output_types: [conda, requirements, pyproject]
         packages:
           - cloudpickle
-          - dask
+          - rapids-dask-dependency==25.2.*,>=0.0.0a0
           - distributed
           - numba>=0.57
           - pytest==7.*
