--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -59,6 +59,8 @@ jobs:
     with:
       build_type: pull-request
       script: ci/build_wheel.sh
+      package-type: python
+      wheel-name: ucx_py
   wheel-tests:
     needs: wheel-build
     secrets: inherit
