--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,8 +52,8 @@ jobs:
       sha: ${{ inputs.sha }}
       date: ${{ inputs.date }}
       script: ci/build_wheel.sh
+      package-name: ucx_py
       package-type: python
-      wheel-name: ucx_py
   wheel-publish:
     needs: wheel-build
     secrets: inherit
@@ -64,3 +64,4 @@ jobs:
       sha: ${{ inputs.sha }}
       date: ${{ inputs.date }}
       package-name: ucx_py
+      package-type: python
