--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -124,8 +124,12 @@ dependencies:
             packages:
               - python=3.12
           - matrix:
+              py: "3.13"
             packages:
-              - python>=3.10,<3.13
+              - python=3.13
+          - matrix:
+            packages:
+              - python>=3.10,<3.14
   build_python:
     common:
       - output_types: [conda, requirements, pyproject]
