--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -124,8 +124,12 @@ dependencies:
             packages:
               - python=3.12
           - matrix:
+              py: "3.13"
             packages:
-              - python>=3.10,<3.13
+              - python=3.13
+          - matrix:
+            packages:
+              - python>=3.10,<3.14
   build_python:
     common:
       - output_types: [conda, requirements, pyproject]
@@ -229,7 +233,7 @@ dependencies:
           - cloudpickle
           - rapids-dask-dependency==25.6.*,>=0.0.0a0
           - distributed
-          - numba>=0.59.1,<0.61.0a0
+          - numba>=0.59.1,<0.62.0a0
           - pytest==7.*
           - pytest-asyncio
           - pytest-rerunfailures
