--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -72,14 +72,6 @@ dependencies:
       - output_types: conda
         matrices:
           - matrix:
-              cuda: "11.4"
-            packages:
-              - cuda-version=11.4
-          - matrix:
-              cuda: "11.8"
-            packages:
-              - cuda-version=11.8
-          - matrix:
               cuda: "12.0"
             packages:
               - cuda-version=12.0
@@ -103,10 +95,6 @@ dependencies:
     specific:
       - output_types: conda
         matrices:
-          - matrix:
-              cuda: "11.*"
-            packages:
-              - cudatoolkit
           - matrix:
               cuda: "12.*"
             packages:
@@ -162,13 +150,9 @@ dependencies:
     specific:
       - output_types: [requirements, pyproject]
         matrices:
-          - matrix: {cuda: "12.*"}
+          - matrix: # All CUDA 12 versions
             packages:
-              - &cupy_cu12 cupy-cuda12x>=12.0.0
-          - matrix: {cuda: "11.*"}
-            packages:
-              - cupy-cuda11x>=12.0.0
-          - {matrix: null, packages: [*cupy_cu12]}
+              - cupy-cuda12x>=12.0.0
   depends_on_ucx_build:
     common:
       - output_types: conda
@@ -189,11 +173,6 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - libucx-cu12>=1.15.0,<1.15.1
-          - matrix:
-              cuda: "11.*"
-              cuda_suffixed: "true"
-            packages:
-              - libucx-cu11>=1.15.0,<1.15.1
           # this fallback is intentionally empty... it simplifies building from source
           # without CUDA, e.g. 'pip install .'
           - matrix: null
@@ -216,11 +195,6 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - libucx-cu12>=1.15.0,<1.19
-          - matrix:
-              cuda: "11.*"
-              cuda_suffixed: "true"
-            packages:
-              - libucx-cu11>=1.15.0,<1.19
           # this fallback is intentionally empty... it simplifies building from source
           # without CUDA, e.g. 'pip install .'
           - matrix: null
@@ -252,11 +226,6 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - cudf-cu12==25.8.*,>=0.0.0a0
-          - matrix:
-              cuda: "11.*"
-              cuda_suffixed: "true"
-            packages:
-              - cudf-cu11==25.8.*,>=0.0.0a0
           - matrix:
             packages:
               - *cudf_unsuffixed
