--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -229,13 +229,13 @@ dependencies:
     common:
       - output_types: conda
         packages:
-          - ucx-py==0.44.*,>=0.0.0a0
+          - ucx-py==0.44.*
   test_python:
     common:
       - output_types: [conda, requirements, pyproject]
         packages:
           - cloudpickle
-          - rapids-dask-dependency==25.6.*,>=0.0.0a0
+          - rapids-dask-dependency==25.6.*
           - distributed
           - numba>=0.59.1,<0.62.0a0
           - pytest==7.*
@@ -243,7 +243,7 @@ dependencies:
           - pytest-rerunfailures
       - output_types: [conda]
         packages:
-          - &cudf_unsuffixed cudf==25.6.*,>=0.0.0a0
+          - &cudf_unsuffixed cudf==25.6.*
     specific:
       - output_types: [requirements, pyproject]
         matrices:
@@ -251,12 +251,12 @@ dependencies:
               cuda: "12.*"
               cuda_suffixed: "true"
             packages:
-              - cudf-cu12==25.6.*,>=0.0.0a0
+              - cudf-cu12==25.6.*
           - matrix:
               cuda: "11.*"
               cuda_suffixed: "true"
             packages:
-              - cudf-cu11==25.6.*,>=0.0.0a0
+              - cudf-cu11==25.6.*
           - matrix:
             packages:
               - *cudf_unsuffixed
