--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
               - id: verify-alpha-spec
                 args:
                   - --fix
-                  - --rapids-version=25.08
+                  - --rapids-version-file=RAPIDS_VERSION
       - repo: https://github.com/rapidsai/dependency-file-generator
         rev: v1.17.0
         hooks:
