--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,13 +24,13 @@ repos:
         hooks:
           - id: shellcheck
       - repo: https://github.com/rapidsai/pre-commit-hooks
-        rev: v0.6.0
+        rev: v0.7.0
         hooks:
               - id: verify-copyright
               - id: verify-alpha-spec
                 args:
                   - --fix
-                  - --rapids-version=25.08
+                  - --rapids-version-file=RAPIDS_VERSION
       - repo: https://github.com/rapidsai/dependency-file-generator
         rev: v1.18.1
         hooks:
